...
  "polynomial_error": "One or more coefficients aren't valid.",
  "wrong_input": "Invalid input",
  "tap_more": "Tap to see more details",
  "discriminant": "Discriminant",
  "fraction": "Fraction",
  "single_point": "Single point",
  "bracketing": "Bracketing",
  "precision": "Precision",
  "convergence": "Convergence",
  "efficiency": "Efficiency",
  "not_computed": "Not computed",
  "nonlinear_error": "Wrong equation or parameters format.",
  "row_reduction": "Row reduction",
...
